Implemented visual hint for targeted plots